overflow-fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -240,6 +240,10 @@ footer{
 }
 @media only screen and (max-width:400px) {
 body{
+    
+    width: 100%;
+}
+main{
     overflow-x: hidden;
 }
 
@@ -254,6 +258,7 @@ body{
 }
 .top-image img {
     width: 370px;
+    margin-top: 20px;
 }
 .second-image img {
     margin-bottom: 15px;
@@ -274,6 +279,9 @@ body{
     border-radius: 10px;
     position: relative;
     overflow: hidden;
+}
+.photo-detail{
+    width: 150px;
 }
 .photo-album{
     grid-template-columns: repeat(2, 1fr);
